# redis-practice

./: .gitignore  README.md
docker/: docker-compose.cluster.yml  docker-compose.monitoring.yml  docker-compose.sentinel.yml  docker-compose.yml
docker/prometheus/: prometheus.yml
docs/00-getting-started/: 01-what-is-redis.md  02-install-with-docker.md  03-redis-cli-basics.md  04-redisinsight-tour.md  README.md
docs/01-data-types/: 01-string.md  02-list.md  03-hash.md  04-set.md  05-sorted-set.md  06-stream.md  07-bitmap.md  08-hyperloglog.md  09-geospatial.md  10-vector-set.md  README.md
docs/02-internals/: 01-encoding-overview.md  02-sds.md  03-listpack-quicklist.md  04-hashtable.md  05-skiplist.md  06-intset.md  07-rax-radix-tree.md  README.md
docs/03-persistence/: 01-rdb-snapshot.md  02-aof.md  03-hybrid-and-recovery.md  04-migration.md  README.md
docs/04-pubsub-streams/: 01-pubsub.md  02-keyspace-notifications.md  03-streams-consumer-group.md  README.md
docs/08-clients/: README.md  (+5 more)
examples/python/: .env.example  README.md  _common.py  pyproject.toml  requirements.txt
examples/python/ch00_getting_started/: 01_ping_and_set.py
examples/python/ch01_data_types/: 01_string_basics.py  02_list_queue.py  03_hash_with_field_ttl.py  05_sorted_set_leaderboard.py  06_stream_consumer_group.py
examples/python/ch04_pubsub_streams/: 01_pubsub.py
examples/python/ch05_transactions_scripting/: 01_lua_token_bucket.py
examples/python/ch07_performance/: 01_pipeline_demo.py
examples/python/ch09_patterns/: 01_cache_aside.py  03_distributed_lock.py
scripts/: benchmark.sh  reset.sh  seed-data.sh
(+60 files in other folders)
